# Intelegent-NLQ-Agent

./: .env.example  README.md  main.py  pyproject.toml
dataset/: customers.csv
src/agent/: __init__.py  agent.py  nodes.py  prompts.py  workflow.py
src/base/: __init__.py  base_model.py  base_node.py  base_workflow.py
src/infrastructure/: __init__.py  duckdb_manager.py
src/schema/: __init__.py  dataset_schema.py
src/tools/: __init__.py
src/tools/retrieve_dataset/: __init__.py  models.py  prompts.py  retrieve_datasets.py  tool_nodes.py  tool_workflow.py
